<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MapsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMap"
                android:layout_width="357dp"
                android:layout_height="93dp"
                android:layout_marginStart="20dp"

                android:layout_marginTop="20dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/elementAmountMaps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:hint="@string/elements_amount"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startBtnMap"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_marginEnd="-10dp"
                android:layout_weight="1"
                android:background="@drawable/start_btn"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutMap"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayoutMap"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutMap" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/recycleMaps"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</FrameLayout>