<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView21"
            android:layout_width="332dp"
            android:layout_height="79dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:text="@string/hint_main_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutMapSize"
            android:layout_width="326dp"
            android:layout_height="85dp"
            android:layout_marginTop="20dp"
            android:padding="1dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView21">

            <EditText
                android:id="@+id/collectionSizeMap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="number"
                android:hint="@string/collection_size"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/calculateMap"
            android:layout_width="328dp"
            android:layout_height="63dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="232dp"
            android:backgroundTint="@color/orange"
            android:text="calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutMapSize" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/error_layout"
            android:layout_width="409dp"
            android:layout_height="230dp"
            android:visibility="invisible"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutMapSize">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="52dp"
                android:layout_height="39dp"
                android:layout_marginStart="176dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/text_input_error"
                android:rotation="-40"
                android:text=""
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="277dp"
                android:layout_height="40dp"
                android:layout_marginStart="76dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/text_input_error"
                android:gravity="center"
                android:text="@string/text_input_error"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:srcCompat="@drawable/ic_baseline_error_outline_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>